--- a/MelDers/LaserSensor/LaserSensor.vcxproj.filters
+++ b/MelDers/LaserSensor/LaserSensor.vcxproj.filters
@@ -15,13 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <None Include="IRsensor.ino" />
+    <None Include="LaserSensor.ino" />
     <None Include="src\arduino folders read me.txt">
       <Filter>Misc Files</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="__vm\.IRsensor.vsarduino.h">
+    <ClInclude Include="__vm\.LaserSensor.vsarduino.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
